[tool.poetry]
name = "havas-propensity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "havas_propensity"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"
numpy = "^1.25.0"
google-cloud-storage = "^2.9.0"
gcsfs = "^2023.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
